--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <p>祝你每天开心 </p>
         <p class="message">即使前方会有黑暗，这颗星也会为你照明。</p>
         <div class="gift-container" id="giftContainer">
-            <img src="assets/gift_closed.png" alt="Gift" class="gift-icon" id="giftIcon">
+            <img src="assets/gift_box.png" alt="Gift" class="gift-icon" id="giftIcon">
             <div class="gift-options" id="giftOptions">
                 <a href="assets/certificate.pdf" target="_blank">Certificate</a>
                 <a href="assets/star_map.pdf" target="_blank">Star Map</a>
